--- a/src/speakers/displayOneSpeaker/speaker.html
+++ b/src/speakers/displayOneSpeaker/speaker.html
@@ -5,12 +5,9 @@
       <img src="http://placehold.it/200x200" style="margin-left:50%;margin-top:10%" class="img-responsive">
     </div>
 
-    <p style="margin-left:30%;">
-      Date début - Date Fin
-      <br><br>
-      <a href="#" class="btn btn-secondary">Voir les sessions</a>
-      <br><br>
-      <a href="#speakers-list" class="btn btn-secondary">Voir les présentateurs</a>
+    <p id="liensReseaux" style="margin-left:30%;">
+    </p>
+    <p id="presentation" style="margin-left:30%;">
     </p>
   </div>
 </div>
