--- a/src/speakers/displayOneSpeaker/speaker.html
+++ b/src/speakers/displayOneSpeaker/speaker.html
@@ -1,13 +1,23 @@
 <div class="container">
-  <div class="row">
+  <div id="listePres" class="list-group">
+      <div class="row" style="margin-left:9%">
+        <a href="#speakers-list">Retour</a>
+      </div>
+  </div>
+  <div class="col">
     <H1 id="name" style="margin-left:24%;margin-top:5%;"></H1>
-    <div class="col-6 col-md-9">
-      <img src="http://placehold.it/200x200" style="margin-left:50%;margin-top:10%" class="img-responsive">
+    <div class="row">
+      <div class="col-6 col-md-9">
+        <img src="http://placehold.it/200x200" style="margin-left:50%;margin-top:10%" class="img-responsive">
+      </div>
     </div>
-
-    <p id="liensReseaux" style="margin-left:30%;">
-    </p>
-    <p id="presentation" style="margin-left:30%;">
-    </p>
+    <div class="row">
+      <p id="liensReseaux" style="margin-left:30%;">
+      </p>
+    </div>
+    <div class="row">
+      <p id="presentation" style="margin-left:30%;">
+      </p>
+      </div>
   </div>
 </div>
