partie bootstrap fait

--- a/src/accueil/corpAccueil.html
+++ b/src/accueil/corpAccueil.html
@@ -1,15 +1,17 @@
 <div class="container">
     <div class="row">
-        <div class="col-6 col-md-9">
-            <img src="http://placehold.it/200x200" style="margin-left:50%;margin-top:10%" class="img-responsive">
+        <div class="row col-6 col-sm-9">
+            <img src="../../image/logo-lille1.png" style="margin-left:50%;margin-top:10%" class="img-responsive">
         </div>
-        <H1 style="margin-left:24%;margin-top:5%;">Conférence</H1>
-        <p style="margin-left:30%;">
-            Date début - Date Fin
-            <br><br>
-            <a href="#sessions-list" class="btn btn-secondary">Voir les sessions</a>
-            <br><br>
-            <a href="#speakers-list" class="btn btn-secondary">Voir les présentateurs</a>
-        </p>
+        <div class="row">
+            <H1 style="margin-left:24%;margin-top:5%;" class="col">Conférence</H1>
+            <p style="margin-left:30%;" class="col">
+                Date début - Date Fin
+                <br><br>
+                <a href="#sessions-list" class="col-sm-9 btn btn-secondary btn-lg">Voir les sessions</a>
+                <br><br>
+                <a href="#speakers-list" class="col-sm-9 btn btn-secondary btn-lg">Voir les présentateurs</a>
+            </p>
+        </div>
     </div>
 </div>
