--- a/src/speakers/displayOneSpeaker/speaker.html
+++ b/src/speakers/displayOneSpeaker/speaker.html
@@ -1,14 +1,12 @@
 <div class="container">
   <div id="listePres" class="list-group">
-      <div class="row" style="margin-left:9%">
-        <a href="#speakers-list">Retour</a>
-      </div>
+        <a class="list-group-item" href="#speakers-list">Retour</a>
   </div>
   <div class="col">
     <H1 id="name" style="margin-left:24%;margin-top:5%;"></H1>
     <div class="row">
-      <div class="col-6 col-md-9">
-        <img src="http://placehold.it/200x200" style="margin-left:50%;margin-top:10%" class="img-responsive">
+      <div class="col-sm" align="center">
+        <img src="http://placehold.it/200x200"  style="min-width:20%; max-width:100%;" class="img-responsive">
       </div>
     </div>
     <div class="row">
